@@ -19,7 +19,7 @@
 #ifndef __FUSE_FILE_HANDLE_H__
 #define __FUSE_FILE_HANDLE_H__
 
-#include <hdfs.h>
+#include <hdfs/hdfs.h>
 #include <pthread.h>
 
 struct hdfsConn;
